Add frontend .env file and update gitignore
- Added healthcare-chat-demo/frontend/.env (contains only PORT and API URL, no secrets)
- Updated .gitignore to be more specific: only ignore root .env and .env.local files
- All environment config files now tracked: .env, .env.example, .env.sandbox, .env.production

--- a/.gitignore
+++ b/.gitignore
@@ -26,10 +26,12 @@ yarn-error.log*
 # Logs
 logs/*.log
 
-# Environment variables
-.env
+# Environment variables (only ignore local overrides, not config files)
 .env.local
 .env.*.local
+
+# Root level .env with secrets (gitignored)
+/.env
 
 # IDE
 .vscode/
